--- a/app/views/partials/_navbar.html.erb
+++ b/app/views/partials/_navbar.html.erb
@@ -21,7 +21,7 @@
               <%= link_to('Edit registration', edit_user_registration_path) %>
             </li>
             <li>
-              <a href="#">TWEET</a>
+              <%= link_to "Tweet", tweets_path %>
             </li>
           <% else %>
             <li>
