--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,3 +16,19 @@
  @import "bootstrap-sprockets";
  @import "bootstrap";
  @import "font-awesome";
+
+.wholebody {
+  display: flex;
+}
+
+.profile {
+  flex: 2 0 auto;
+}
+
+.tweetbody {
+  flex: 1 0 auto;
+}
+
+.suggestions {
+  flex: 2 0 auto;
+}
